--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-axios": "^2.0.5",
     "react-bulma-components": "^4.0.7",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
