--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "concurrently": "^6.2.0",
-    "if-env": "^1.0.4",
+    "mongoose": "^5.12.14",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-bulma-components": "^4.0.7",
@@ -18,14 +17,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon server.js\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "seed": "node scripts/seedDB.js",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
