--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-axios": "^2.0.5",
     "react-bulma-components": "^4.0.7",
     "react-dom": "^17.0.2",
+    "react-form-input-validation": "^2.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
