--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.12.15",
     "path": "^0.12.7",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-bulma-components": "^4.0.7",
