--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "concurrently": "^6.2.0",
+    "connect-mongodb-session": "^2.4.1",
+    "express-session": "^1.17.2",
     "if-env": "^1.0.4",
     "mongoose": "^5.12.15",
     "path": "^0.12.7",
@@ -19,6 +21,7 @@
     "react-form-input-validation": "^2.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "simple-react-validator": "^1.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
