--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "concurrently": "^6.2.0",
     "connect-mongodb-session": "^2.4.1",
     "express-session": "^1.17.2",
