--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-form-input-validation": "^2.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-validate-form": "^1.0.7",
     "simple-react-validator": "^1.6.0",
     "web-vitals": "^1.1.2"
   },
